# plover-half-keyboard

./: README.md  setup.cfg
plover_half_keyboard/: __init__.py  lib.py  subprocess_run.py
