[metadata]
name = plover_half_keyboard
version = 0.0.0
author = user202729
description = Machine plugin for Plover
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/user202729/plover-half-keyboard
classifiers =
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev8
packages = plover_half_keyboard

[options.entry_points]
plover.machine =
	Half keyboard = plover_half_keyboard:HalfKeyboard
